--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
           <p class="start">Iniciar</p>
         </button>
       </div>
+      <div class="open_pages"></div>
       <div class="space"></div>
       <button pressed class="credit">
         <p>Desenvolvido por</p>
