--- a/index.html
+++ b/index.html
@@ -36,8 +36,13 @@
           <p class="start">Iniciar</p>
         </button>
       </div>
-      <div class="start_menu" id="start_meun">
-        
+      </div>
+      <div class="start_menu" id="start_menu">
+        <div class="start_menu_left_bar"></div>
+        <div class="start_menu_itens">
+          <span class="start_menu_item">Projetos <span class="arrow_right">></span></span>
+          <span class="start_menu_item">Contato</span>
+        </div>
       </div>
       <div class="space"></div>
       <div class="open_pages"></div>
