--- a/index.html
+++ b/index.html
@@ -36,23 +36,26 @@
               <main class="container">
                 <div class="calculadora__principal" id="calculadora__principal">
                     <input type="text" readonly class="calculadora__pricipal--mostrador" id="calculadora__principal--mostrador"></input>
-                    <button class="numero clear">C</button>
-                    <button id="button" class="numero">7</button>
-                    <button id="button" class="numero">8</button>
-                    <button id="button" class="numero">9</button>
-                    <button id="button" class="numero">+</button>
-                    <button id="button" class="numero">4</button>
-                    <button id="button" class="numero">5</button>
-                    <button id="button" class="numero">6</button>
-                    <button id="button" class="numero">-</button>
-                    <button id="button" class="numero">1</button>
-                    <button id="button" class="numero">2</button>
-                    <button id="button" class="numero">3</button>
-                    <button id="button" class="numero">*</button>
-                    <button id="button" class="numero">0</button>
-                    <button id="button" class="numero">.</button>
-                    <button id="button" class="numero">=</button>
-                    <button id="button" class="numero">/</button>
+                    <div class="calculator_buttons">
+                      <button class="numero clear">C</button>
+                      <button id="button" class="numero">7</button>
+                      <button id="button" class="numero">8</button>
+                      <button id="button" class="numero">9</button>
+                      <button id="button" class="numero">+</button>
+                      <button id="button" class="numero">4</button>
+                      <button id="button" class="numero">5</button>
+                      <button id="button" class="numero">6</button>
+                      <button id="button" class="numero">-</button>
+                      <button id="button" class="numero">1</button>
+                      <button id="button" class="numero">2</button>
+                      <button id="button" class="numero">3</button>
+                      <button id="button" class="numero">*</button>
+                      <button id="button" class="numero">0</button>
+                      <button id="button" class="numero">.</button>
+                      <button id="button" class="numero">=</button>
+                      <button id="button" class="numero">/</button>
+                    </div>
+                    
                     
                 </div>
             </main>
