backspace button working

--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
                 <div class="calculadora__principal" id="calculadora__principal">
                     <input type="text" readonly class="calculadora__pricipal--mostrador" id="calculadora__principal--mostrador"></input>
                     <div class="calculator_buttons">
-                      <button class="numero clear">C</button>
+                      <div class="clearButton">
+                        <button class="numero" id="backspace">Backspace</button>
+                        <button class="numero clear">C</button>
+                      </div>
                       <button id="button" class="numero">7</button>
                       <button id="button" class="numero">8</button>
                       <button id="button" class="numero">9</button>
@@ -54,9 +57,7 @@
                       <button id="button" class="numero">.</button>
                       <button id="button" class="numero">=</button>
                       <button id="button" class="numero">/</button>
-                    </div>
-                    
-                    
+                    </div> 
                 </div>
             </main>
             </div>
