bug fix calculator

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <a href="#"><span class="app_name">Menu</span></a>
           </a>
         </div>
-        <div class="app_window disabled" id="app_window_calculator">
-          <div class="window" id="window">
+        <div class="app_window calculator disabled" id="app_window_calculator">
+          <div class="window calculator_window" id="window">
             <div class="title-bar">
               <div class="title-bar-text">Calculadora</div>
               <div class="title-bar-controls">
@@ -38,8 +38,8 @@
                     <input type="text" readonly class="calculadora__pricipal--mostrador" id="calculadora__principal--mostrador"></input>
                     <div class="calculator_buttons">
                       <div class="clearButton">
-                        <button class="numero" id="backspace">Backspace</button>
-                        <button class="numero clear">C</button>
+                        <button class="numero backspace" id="backspace">Backspace</button>
+                        <button class="numero clearBtn">C</button>
                       </div>
                       <button id="button" class="numero">7</button>
                       <button id="button" class="numero">8</button>
