--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="#"><span class="app_name">Menu</span></a>
           </a>
         </div>
-        <div class="app_window calculator disabled" id="app_window_calculator">
+        <div class="app_window calculator " id="app_window_calculator">
           <div class="window calculator_window" id="window">
             <div class="title-bar">
               <div class="title-bar-text">Calculadora</div>
