weather app working
code it's workign need to start with CSS

--- a/index.html
+++ b/index.html
@@ -62,9 +62,25 @@
             </main>
             </div>
           </div>
-          </div>
-          
         </div>
+        <div class="weather-app">
+          <div class="title-bar">
+            <div class="title-bar-text">Weather App</div>
+            <div class="title-bar-controls">
+              <button aria-label="Minimize"></button>
+              <button aria-label="Maximize"></button>
+              <button aria-label="Close"></button>
+            </div>
+          </div>
+          <form>
+            <section class="container">
+              <input type="text" class="input" placeholder="Digite o nome da cidade!" id="input">
+              <input type="submit" class="submit" value="Procurar">
+            </section>
+          </form> 
+          <section class="tempo">
+        </div>
+      </div>
       </div>
     </main>
 
@@ -105,5 +121,6 @@
     </footer>
     <script src="./main.js"></script>
     <script src="./Projects/Calculadora/main.js"></script>
+    <script src="./Projects/Tempo/main.js"></script>
   </body>
 </html>
