--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <a href="#"><span class="app_name">Menu</span></a>
           </a>
         </div>
+        <!-- calculator app-->
         <div class="app_window calculator disabled" id="app_window_calculator">
           <div class="window calculator_window" id="window">
             <div class="title-bar">
@@ -63,7 +64,8 @@
             </div>
           </div>
         </div>
-        <div class="weather_app" id="app_window_weather">
+        <!-- Weather app -->
+        <div class="weather_app disabled" id="app_window_weather">
           <div class="window">
             <div class="title-bar">
               <div class="title-bar-text">Weather App</div>
@@ -84,8 +86,34 @@
             </div>
           </div>
         </div>
-      </div>  
+        <!--cep search app-->
+        <div class="window" >
+          <div class="title-bar">
+            <div class="title-bar-text">CEP Search App</div>
+            <div class="title-bar-controls">
+              <button aria-label="Minimize"></button>
+              <button aria-label="Maximize"></button>
+              <button aria-label="Close"></button>
+            </div>
+          </div>
+          <div class="window-body">
+            <section>
+              <p class="titulo">Buscador de CEP</p>
+            </section>
+          <form>
+              <div class="inputContainer">
+                  <input type="text" placeholder="Digite o CEP" id="cepInput" class="cepInput" >
+                  <input  type='submit' value="Adicionar" id="adicionar" class="adicionarBtn"></input>
+              </div>
+              <!-- error message -->
+              <p id="mensagemErro" class="mensagemErro"></p>
+              <div class="resultado" id="resultado">
+          </div>
+        </div>
+        <!-- next app here -->
       </div>
+
+
     </main>
 
     <footer class="explorer_bar">
@@ -126,5 +154,6 @@
     <script src="./main.js"></script>
     <script src="./Projects/Calculadora/main.js"></script>
     <script src="./Projects/Tempo/main.js"></script>
+    <script src="./Projects/Cep/main.js"></script>
   </body>
 </html>
