--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <section>
               <p class="titulo">Buscador de CEP</p>
             </section>
-          <form>
+            <form>
               <div class="inputContainer">
                   <input type="text" placeholder="Digite o CEP" id="cepInput" class="cepInput" >
                   <input  type='submit' value="Adicionar" id="adicionar" class="adicionarBtn"></input>
@@ -108,6 +108,7 @@
               <!-- error message -->
               <p id="mensagemErro" class="mensagemErro"></p>
               <div class="resultado" id="resultado">
+            </form>
           </div>
         </div>
         <!-- next app here -->
