--- a/index.html
+++ b/index.html
@@ -87,28 +87,30 @@
           </div>
         </div>
         <!--cep search app-->
-        <div class="window" >
-          <div class="title-bar">
-            <div class="title-bar-text">CEP Search App</div>
-            <div class="title-bar-controls">
-              <button aria-label="Minimize"></button>
-              <button aria-label="Maximize"></button>
-              <button aria-label="Close"></button>
-            </div>
-          </div>
-          <div class="window-body">
-            <section>
-              <p class="titulo">Buscador de CEP</p>
-            </section>
-            <form>
-              <div class="inputContainer">
-                  <input type="text" placeholder="Digite o CEP" id="cepInput" class="cepInput" >
-                  <input  type='submit' value="Adicionar" id="adicionar" class="adicionarBtn"></input>
+        <div class="cep_app" id="app_window_cep">
+          <div class="window " >
+            <div class="title-bar">
+              <div class="title-bar-text">CEP Search App</div>
+              <div class="title-bar-controls">
+                <button aria-label="Minimize"></button>
+                <button aria-label="Maximize"></button>
+                <button aria-label="Close"></button>
               </div>
-              <!-- error message -->
-              <p id="mensagemErro" class="mensagemErro"></p>
-              <div class="resultado" id="resultado">
-            </form>
+            </div>
+            <div class="window-body">
+              <section>
+                <p class="titulo">Buscador de CEP</p>
+              </section>
+              <form>
+                <div class="inputContainer">
+                    <input type="text" placeholder="Digite o CEP" id="cepInput" class="cepInput" >
+                    <input  type='submit' value="Adicionar" id="adicionar" class="adicionarBtn"></input>
+                </div>
+                <!-- error message -->
+                <p id="mensagemErro" class="mensagemErro"></p>
+                <div class="resultado" id="resultado">
+              </form>
+            </div>
           </div>
         </div>
         <!-- next app here -->
