--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
           </div>
         </div>
         <!--cep search app-->
-        <div class="cep_app" id="app_window_cep">
+        <div class="cep_app disabled" id="app_window_cep">
           <div class="window " >
             <div class="title-bar">
               <div class="title-bar-text">CEP Search App</div>
               <div class="title-bar-controls">
                 <button aria-label="Minimize"></button>
                 <button aria-label="Maximize"></button>
-                <button aria-label="Close"></button>
+                <button aria-label="Close" id="close_cep"></button>
               </div>
             </div>
             <div class="window-body">
@@ -142,14 +142,19 @@
         </div>
         <div class="start_menu_itens">
           <span class="start_menu_item" id="start_menu_weather">Weather App</span>
-          <span class="start_menu_item">Contato</span>
+          <span class="start_menu_item" id="start_menu_cep_search">CEP Search</span>
           <span class="start_menu_item" id="start_menu_calculator">Calculadora</span>
+          <span class="start_menu_item" >Contato</span>
         </div>
       </div>
       
       <div class="space"></div>
-      <div class="open_pages"></div>
-      <button class="credit">
+      <div class="open_pages">
+        <div class="open_app_tab">
+          <span>Calculator</span>
+        </div>
+      </div>
+      <button class="credit ">
         <p>Desenvolvido por</p>
         <p>Lucas Bertolini</p>
       </button>
