--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./style/style.css" />
     <link rel="stylesheet" href="./style/reset.css" />
     <link rel="stylesheet" href="https://unpkg.com/98.css" />
+    
   </head>
   <body>
     <main>
@@ -88,11 +89,11 @@
         </div>
         <!--cep search app-->
         <div class="cep_app disabled" id="app_window_cep">
-          <div class="window " >
+          <div class="window cep" >
             <div class="title-bar">
               <div class="title-bar-text">CEP Search App</div>
               <div class="title-bar-controls">
-                <button aria-label="Minimize"></button>
+                <button aria-label="Minimize" id="minimaze"></button>
                 <button aria-label="Maximize"></button>
                 <button aria-label="Close" id="close_cep"></button>
               </div>
@@ -149,15 +150,15 @@
       </div>
       
       <div class="space"></div>
-      <div class="open_pages">
+      <div class="open_pages" id="open_pages">
         <div class="open_app_tab">
           <span>Calculator</span>
         </div>
       </div>
-      <button class="credit ">
-        <p>Desenvolvido por</p>
-        <p>Lucas Bertolini</p>
-      </button>
+      <div class="credit ">
+        <span>Desenvolvido por</span><br>
+        <span>Lucas Bertolini</span>
+      </div>
     </footer>
     <script src="./main.js"></script>
     <script src="./Projects/Calculadora/main.js"></script>
