dragable object working

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </a>
         </div>
         <!-- calculator app-->
-        <div class="app_window calculator disabled" id="app_window_calculator">
+        <div class="app_window calculator " id="app_window_calculator">
           <div class="window calculator_window" id="window">
             <div class="title-bar">
               <div class="title-bar-text">Calculadora</div>
@@ -164,5 +164,6 @@
     <script src="./Projects/Calculadora/main.js"></script>
     <script src="./Projects/Tempo/main.js"></script>
     <script src="./Projects/Cep/main.js"></script>
+    <script src="./dragObjects.js"></script>
   </body>
 </html>
