fixing some bugs

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
           </a>
         </div>
         <!-- calculator app-->
-        <div class="app_window calculator " id="app_window_calculator">
+        <div class="app_window calculator disabled " id="app_window_calculator">
           <div class="window calculator_window" id="window">
-            <div class="title-bar">
+            <div class="title-bar" id="calculator_tab ">
               <div class="title-bar-text">Calculadora</div>
               <div class="title-bar-controls">
                 <button aria-label="Minimize" id="minimaze"></button>
@@ -116,8 +116,6 @@
         </div>
         <!-- next app here -->
       </div>
-
-
     </main>
 
     <footer class="explorer_bar">
