--- a/index.html
+++ b/index.html
@@ -116,6 +116,27 @@
         </div>
         <!-- next app here -->
       </div>
+      <div class="contact" id="app_window_contact">
+        <div class="window">
+          <div class="title-bar">
+            <div class="title-bar-text">Contact</div>
+            <div class="title-bar-controls">
+              <button aria-label="Minimize"></button>
+              <button aria-label="Maximize"></button>
+              <button aria-label="Close"></button>
+            </div>
+          </div>
+          <div class="window-body">
+            <p>I created this as my portfolio, hope you enjoy!!</p>
+            <p>I'am a junior Front End Developer!!</p>
+            <p>Technology used: HTML, CSS and JavaScript</p><br>
+            <p>Huuge thanks to <a href="https://github.com/jdan">jdan</a> for the awesome CSS library</p>
+            <p class="contact-name">Coded by Lucas Bertolini <a href="#">Linkedin</a> <a href="#">Github</a></p>
+            
+
+          </div>
+        </div>
+      </div>
     </main>
 
     <footer class="explorer_bar">
