added classes for credict app

--- a/index.html
+++ b/index.html
@@ -116,14 +116,14 @@
         </div>
         <!-- next app here -->
       </div>
-      <div class="contact" id="app_window_contact">
-        <div class="window">
+      <div class="contact disabled" id="app_window_credict">
+        <div class="window" id="window">
           <div class="title-bar">
             <div class="title-bar-text">Contact</div>
             <div class="title-bar-controls">
-              <button aria-label="Minimize"></button>
+              <button aria-label="Minimize" id="minimize-credict"></button>
               <button aria-label="Maximize"></button>
-              <button aria-label="Close"></button>
+              <button aria-label="Close" id="close_credict"></button>
             </div>
           </div>
           <div class="window-body">
@@ -164,7 +164,7 @@
           <span class="start_menu_item" id="start_menu_weather">Weather App</span>
           <span class="start_menu_item" id="start_menu_cep_search">CEP Search</span>
           <span class="start_menu_item" id="start_menu_calculator">Calculadora</span>
-          <span class="start_menu_item" >Contato</span>
+          <span class="start_menu_item" id="start_menu_credict" >Contato</span>
         </div>
       </div>
       
