link to new calculator js file

--- a/index.html
+++ b/index.html
@@ -186,5 +186,6 @@
     <script src="./Projects/Tempo/main.js"></script>
     <script src="./Projects/Cep/main.js"></script>
     <script src="./dragObjects.js"></script>
+    <script src="./Elements/Calculator.js"></script>
   </body>
 </html>
