styling explorer bar

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         -->
       </div>
       <div class="credit">
-        <span>Desenvolvido por</span><br />
+        <span>Desenvolvido por</span>
         <span>Lucas Bertolini</span>
       </div>
     </footer>
